[tool.poetry]
name = "mb8611-cli"
version = "0.0.1"
authors = ["Andrew Udvare <audvare@gmail.com>"]
description = "CLI tool for managing MB8611 series modem."
license = "MIT"
packages = [{ include = "mb8611" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
loguru = "^0.7.2"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pylint = "^2.17.7"
pylint-quotes = "^0.2.3"
rope = "^1.10.0"
toml = "^0.10.2"
types-requests = "^2.31.0.8"
yapf = "^0.40.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coveralls = "^3.3.1"
mock = "^5.1.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
mb8611 = "mb8611:main"
